Change directory ejs, add controller

--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/piznel/gladys-livebox/issues"
   },
-  "homepage": "https://github.com/piznel/gladys-livebox#readme"
+  "homepage": "https://github.com/piznel/gladys-livebox#readme",
+  "dependencies": {
+    "json-fs-store": "^1.0.1"
+  }
 }
