change name img, minimified js

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "Decoder"
   ],
   "author": "Philippe Lenzi",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/piznel/gladys-livebox/issues"
   },
